feat: implement Phase 1 IPFS integration with Helia
- Add IPFS service with Helia implementation (uploadToIPFS, getFromIPFS)
- Add IPFSTest component for testing IPFS functionality
- Update App.tsx to include IPFS test component
- Add multiformats dependency for CID handling
- Fix ESLint config: add browser globals (alert, TextEncoder, TextDecoder)
- Update setup.sh: add multiformats dependency and ESLint browser globals
- Fix lint-staged config to run ESLint from correct directory

--- a/apps/dao-dapp/package.json
+++ b/apps/dao-dapp/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-query-devtools": "~5.90.2",
     "axios": "^1.13.2",
     "helia": "^2.1.0",
+    "multiformats": "^13.4.1",
     "pinata": "^1.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
