--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,7 @@
 {
-  "*.{ts,tsx,js}": ["eslint --fix", "prettier --write"],
+  "apps/dao-dapp/**/*.{ts,tsx,js}": [
+    "bash -c 'cd apps/dao-dapp && eslint --fix'",
+    "prettier --write"
+  ],
   "packages/contracts/**/*.sol": ["prettier --write", "solhint --fix"]
 }
